# cude-experiment-1

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  game-manager.cpp  game-view.cpp  game.cpp  gpu.cu  gpu.cuh  imgui.ini  main.cpp  main.cu  view.cpp
logic/: continuous_game_of_life.cpp  falling_sand.cpp  game_of_life.cpp  logic_interface.cpp
logic/nebula/: nebula.cpp
models/: game-board.cpp
